prevent horizontal scroll since is bad ux

--- a/src/hero.css
+++ b/src/hero.css
@@ -93,3 +93,6 @@ body, *{
   font-style: normal;
 }
 
+html, body {
+  overflow-x: hidden;
+}
